src/main/java/com/example/socialmediaapi/response/error/PostNotFoundException.java
package com.example.socialmediaapi.response.error;

public class PostNotFoundException extends RuntimeException{
    public PostNotFoundException(String message)
    {
        super(message);
    }
}

